tests/valid/function/type_forall_fn_value_bound_call.facet
trait Show;

impl Show for affine isize;

fn keep<T>(x: affine T) -> affine T where T: Show {
  x
}

fn main() -> affine isize {
  let f: unrestricted for<T> fn(affine T) -> affine T where T: Show = keep in
  (f 1)
}
