tests/invalid/immutable_assign/immutable_affine_param.facet
fn f(x: affine isize) -> unrestricted () {
    (x = 99);
    (drop x)
}
